@@ -99,7 +99,9 @@
 - added: `F.dir(path)` for changing of root directory
 - added: `NOSQL()/TABLE().memory(count, [size])` for memory consumption, more in docs
 - added: `HttpFile.fs(storage_name, [custom], [callback])` saves a file into the FileStorage
+- added: `HttpFile.nosql(db_name, [custom], [callback])` saves a file into the FileStorage
 - added: `res.filefs(storage_name, id, [download], [headers], [callback])` returns file from FileStorage
+- added: `res.filenosql(db_name, id, [download], [headers], [callback])` returns file from FileStorage
 - added: new stats `F.stats.performance` contains count of `request` and `file` per minute
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
